@@ -1,8 +1,9 @@
 package com.zarinatta.zarinattacrawler.service.crawler;
 
+import com.zarinatta.zarinattacrawler.entity.BookMark;
 import com.zarinatta.zarinattacrawler.entity.Ticket;
-import com.zarinatta.zarinattacrawler.enums.MainStationCode;
-import com.zarinatta.zarinattacrawler.repository.TicketRepository;
+import com.zarinatta.zarinattacrawler.enums.StationCode;
+import com.zarinatta.zarinattacrawler.repository.BookMarkRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.hc.client5.http.classic.methods.HttpPost;
@@ -19,14 +20,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.io.IOException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.time.format.DateTimeFormatter;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Locale;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.*;
 
 @Slf4j
 @Service
@@ -34,92 +28,62 @@ import java.util.regex.Pattern;
 @Transactional(readOnly = true)
 public class RealTimeSeatCrawler {
 
-    private final TicketRepository ticketRepository;
     private final CloseableHttpClient httpClient;
-    private List<Ticket> ticketList;
+    private final BookMarkRepository bookMarkRepository;
 
-    public void getTicketList() {
-        ticketList = ticketRepository.findAll();
-        realtimeSeatCrawler();
-    }
-
-    @Transactional
-    public void realtimeSeatCrawler() {
+    public void startCycle() {
         long startTime = System.currentTimeMillis();
-        LocalDateTime now = LocalDateTime.now();
-        for (MainStationCode depart : MainStationCode.values()) {
-            for (MainStationCode arrive : MainStationCode.values()) {
-                if (depart.equals(arrive)) break;
-                LocalDateTime crawlingTime = now;
-                while (!crawlingTime.toLocalDate().isAfter(now.toLocalDate().plusDays(6))) {
-                    HttpPost post = makeHttpPost(depart, arrive, crawlingTime);
-                    try (CloseableHttpResponse response = httpClient.execute(post)) { // 데이터 가져 오기
-                        byte[] bytes = response.getEntity().getContent().readAllBytes();
-                        String responseBody = new String(bytes, StandardCharsets.UTF_8);
-                        Document document = Jsoup.parse(responseBody);
-                        response.getEntity().getContent().close();
-                        Elements table = document.select("tr");
-                        Iterator<Element> tickets = table.iterator();
-                        while (tickets.hasNext()) {
-                            Element ticket = tickets.next();
-                            Elements rows = ticket.select("td");
-                            List<String> ticketInfo = rows.eachText();
-                            String firstClass = ticket.select("td:nth-of-type(5) img").attr("alt");
-                            String normalSeat = ticket.select("td:nth-of-type(6) img").attr("alt");
-                            String babySeat = ticket.select("td:nth-of-type(7) img").attr("alt");
-                            if (ticketInfo.size() > 4 && !ticketInfo.get(1).startsWith("SRT")) {
-                                //todo 임의로 만든 내용임
-                                ticketRepository.save(
-                                        Ticket.builder()
-                                                .ticketType(ticketInfo.get(1))
-                                                .departDate(ticketInfo.get(2))
-                                                .arriveTime(ticketInfo.get(2))
-                                                .departTime(ticketInfo.get(3))
-                                                .price(ticketInfo.get(4))
-                                                .build());
-                            }
-                        }
-                        // 다음 쪽으로 이동
-                        String nextPage = table.select("#divResult > table.btn > tbody > tr > td").html();
-                        System.out.println(nextPage);
-                        Pattern timeExtractor = Pattern.compile("btnNextReserve\\('([0-9]{8})', '([0-9]{6})'\\)");
-                        Matcher timeMatcher = timeExtractor.matcher(nextPage);
-                        if (timeMatcher.find()) {
-                            String date = timeMatcher.group(1);
-                            String time = timeMatcher.group(2);
-                            System.out.println("date: " + date);
-                            System.out.println("time: " + time);
-                            DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
-                            LocalDateTime newDateTime = LocalDateTime.parse(date + time, dateFormatter);
-                            // crawlingTime을 newDateTime으로 갱신
-                            crawlingTime = crawlingTime.withYear(newDateTime.getYear())
-                                    .withMonth(newDateTime.getMonthValue())
-                                    .withDayOfMonth(newDateTime.getDayOfMonth())
-                                    .withHour(newDateTime.getHour())
-                                    .withMinute(newDateTime.getMinute())
-                                    .withSecond(newDateTime.getSecond());
-
-                            // 결과 출력
-                            System.out.println("Updated crawlingTime: " + crawlingTime);
-                        } else {
-                            System.out.println("No next page");
-                            crawlingTime = crawlingTime.plusDays(7);
-                        }
-                    } catch (IOException e) {
-                        throw new RuntimeException(e);
-                    } finally {
-                        post.reset();
-                    }
-
-                }
-            }
-        }
-
+        List<BookMark> bookMarkList = bookMarkRepository.findAllByTimeOutFalseJoinAll(); //todo time out을 기준으로 하기 보다, 현재 시간 기준으로 가쟈오기
+        Map<Ticket, List<BookMark>> ticketBookMarkMap = makeBookMarkUserMap(bookMarkList);
+        realtimeSeatCrawler(ticketBookMarkMap);
         long estimatedTime = System.currentTimeMillis() - startTime;
         System.out.println("총 걸린 시간 : " + estimatedTime / 1000.0 + " seconds");
     }
 
-    public HttpPost makeHttpPost(MainStationCode depart, MainStationCode arrive, LocalDateTime crawlingTime) {
+    public Map<Ticket, List<BookMark>> makeBookMarkUserMap(List<BookMark> bookMarkList) {
+        Map<Ticket, List<BookMark>> ticketBookMarkMap = new HashMap<>();
+        for (BookMark bookMark : bookMarkList) {
+            if (ticketBookMarkMap.containsKey(bookMark.getTicket())) {
+                ticketBookMarkMap.get(bookMark.getTicket()).add(bookMark);
+            } else {
+                List<BookMark> list = new ArrayList<>();
+                list.add(bookMark);
+                ticketBookMarkMap.put(bookMark.getTicket(), list);
+            }
+        }
+        return ticketBookMarkMap;
+    }
+
+    @Transactional
+    public void realtimeSeatCrawler(Map<Ticket, List<BookMark>> ticketBookMarkMap) {
+        for (Map.Entry<Ticket, List<BookMark>> ticketBookMarkSet : ticketBookMarkMap.entrySet()) {
+            Ticket target = ticketBookMarkSet.getKey();
+            HttpPost post = makeHttpPost(target.getDepartStation(), target.getArriveStation(), target.getDepartTime());
+            try (CloseableHttpResponse response = httpClient.execute(post)) { // 데이터 가져 오기
+                byte[] bytes = response.getEntity().getContent().readAllBytes();
+                String responseBody = new String(bytes, StandardCharsets.UTF_8);
+                Document document = Jsoup.parse(responseBody);
+                response.getEntity().getContent().close();
+                Elements table = document.select("tr");
+                Iterator<Element> tickets = table.iterator();
+                while (tickets.hasNext()) {
+                    Element ticket = tickets.next();
+                    Elements rows = ticket.select("td");
+                    List<String> ticketInfo = rows.eachText();
+                    if (isSameTicket(target, ticketInfo)) {
+                        List<BookMark> bookMarks = ticketBookMarkSet.getValue();
+                        sendSMS(bookMarks, ticket);
+                    }
+                }
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            } finally {
+                post.reset();
+            }
+        }
+    }
+
+    private HttpPost makeHttpPost(StationCode depart, StationCode arrive, String crawlingTime) {
         HttpPost httpPost = new HttpPost("https://www.letskorail.com/ebizprd/EbizPrdTicketPr21111_i1.do");
         httpPost.setHeader("accept", "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7");
         httpPost.setHeader("accept-encoding", "gzip, deflate, br, zstd");
@@ -140,24 +104,73 @@ public class RealTimeSeatCrawler {
         httpPost.setHeader("upgrade-insecure-requests", "1");
         httpPost.setHeader("user-agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/127.0.0.0 Safari/537.36");
 
-        DateTimeFormatter year = DateTimeFormatter.ofPattern("YYYY");
-        DateTimeFormatter month = DateTimeFormatter.ofPattern("MM");
-        DateTimeFormatter day = DateTimeFormatter.ofPattern("dd");
-        DateTimeFormatter week = DateTimeFormatter.ofPattern("EE", Locale.KOREAN);
-        DateTimeFormatter total = DateTimeFormatter.ofPattern("yyyyMMdd");
-        DateTimeFormatter txtGoHourFormat = DateTimeFormatter.ofPattern("HHmm");
         String payload = "txtGoStartCode=&txtGoEndCode=&radJobId=1&selGoTrain=05&txtSeatAttCd_4=015&txtSeatAttCd_3=000&txtSeatAttCd_2=000&txtPsgFlg_2=0&txtPsgFlg_3=0&txtPsgFlg_4=0&txtPsgFlg_5=0&chkCpn=N&selGoSeat1=015&selGoSeat2=&txtPsgCnt1=1&txtPsgCnt2=0&txtGoPage=1" +
-                "&txtGoAbrdDt=" + crawlingTime.format(total) + "&selGoRoom=&useSeatFlg=&useServiceFlg=&checkStnNm=Y&txtMenuId=11&SeandYo=N&txtGoStartCode2=&txtGoEndCode2=&hidEasyTalk=" +
-                "&txtGoStart=" + URLEncoder.encode(depart.getName(), StandardCharsets.UTF_8) +
-                "&txtGoEnd=" + URLEncoder.encode(arrive.getName(), StandardCharsets.UTF_8) +
-                "&selGoYear=" + crawlingTime.format(year) +
-                "&selGoMonth=" + crawlingTime.format(month) +
-                "&selGoDay=" + crawlingTime.format(day) +
-                "&txtGoYoil=" + URLEncoder.encode(crawlingTime.format(week), StandardCharsets.UTF_8) +
-                "&txtGoHour=" + crawlingTime.format(txtGoHourFormat) + "00" +
+                "&txtGoAbrdDt=" + crawlingTime.substring(0, 8) + "&selGoRoom=&useSeatFlg=&useServiceFlg=&checkStnNm=Y&txtMenuId=11&SeandYo=N&txtGoStartCode2=&txtGoEndCode2=&hidEasyTalk=" +
+                "&txtGoStart=" + URLEncoder.encode(depart.name(), StandardCharsets.UTF_8) +
+                "&txtGoEnd=" + URLEncoder.encode(arrive.name(), StandardCharsets.UTF_8) +
+                "&selGoYear=" + crawlingTime.substring(0, 4) +
+                "&selGoMonth=" + crawlingTime.substring(4, 6) +
+                "&selGoDay=" + crawlingTime.substring(6, 8) +
+                "&txtGoHour=" + minusTime(crawlingTime.substring(8, 10)) + crawlingTime.substring(10, 14) +
                 "&txtPsgFlg_1=1";
         httpPost.setEntity(new StringEntity(payload, StandardCharsets.UTF_8));
         System.out.println(payload);
         return httpPost;
+    }
+
+    private boolean isSameTicket(Ticket target, List<String> ticketInfo) {
+        String departInfo = target.getDepartStation().name() + " " + formatTime(target.getDepartTime());
+        String arriveInfo = target.getArriveStation().name() + " " + formatTime(target.getArriveTime());
+        if (ticketInfo.size() > 4
+                && !ticketInfo.get(1).startsWith("SRT")
+                && departInfo.equals(ticketInfo.get(2))
+                && arriveInfo.equals(ticketInfo.get(3))) {
+            return true;
+        }
+        return false;
+    }
+
+    private String formatTime(String dateTime) {
+        String timePart = dateTime.substring(8, 12);
+        String hour = timePart.substring(0, 2);
+        String minute = timePart.substring(2, 4);
+        return hour + ":" + minute;
+    }
+
+    private String minusTime(String time) {
+        String minusTime = String.valueOf(Integer.parseInt(time) - 1);
+        return String.format("%02d", Integer.parseInt(minusTime));
+    }
+
+    //todo 비동기 처리 가능?
+    private void sendSMS(List<BookMark> bookMarks, Element ticket) {
+        String waitSeat = ticket.select("td:nth-of-type(10) img").attr("alt");
+        String firstClass = ticket.select("td:nth-of-type(5) img").attr("alt");
+        String normalSeat = ticket.select("td:nth-of-type(6) img").attr("alt");
+        String babySeat = ticket.select("td:nth-of-type(7) img").attr("alt");
+
+        for (BookMark bookMark : bookMarks) {
+            if (bookMark.isWantWaitingReservation() && waitSeat.equals("신청하기")) {
+                System.out.println("1");
+            }
+            if (bookMark.isWantFirstClass() && firstClass.equals("예약하기")) {
+                System.out.println("2");
+            }
+            if (bookMark.getWantNormalSeat().name().equals("SEAT") && normalSeat.equals("예약하기")) {
+                System.out.println("3");
+            }
+            if (bookMark.getWantNormalSeat().name().equals("STANDING_SEAT") && (normalSeat.equals("예약하기") || normalSeat.equals("입좌석묶음예약"))) {
+                System.out.println("4");
+            }
+            if (bookMark.getWantBabySeat().name().equals("SEAT") && babySeat.equals("유아동반객실")) {
+                System.out.println("5");
+            }
+            if (bookMark.getWantBabySeat().name().equals("STANDING_SEAT") && (babySeat.equals("유아동반객실") || babySeat.equals("입좌석묶음예약"))) {
+                System.out.println("6");
+            }
+            String phoneNumber = bookMark.getUser().getPhoneNumber();
+            System.out.println(phoneNumber);
+            System.out.println(firstClass+" "+normalSeat+" "+babySeat+" "+waitSeat);
+        }
     }
 }
